tests/bad/new-non-pointer-destination.pas
program new_non_pointer_destination;
type
  PInt = ^integer;
var
  p: PInt;
begin
  New(p^);
end.
